--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ repositories {
 dependencies {
     compile 'org.skyscreamer:jsonassert:1.5.0'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'org.hamcrest:hamcrest-all:1.3'
 
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
+
     testCompile 'junit:junit:4.11'
 }
-
